// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should format the string with highlights 1`] = `<DocumentFragment />`;

exports[`should format the string with highlights 2`] = `
<DocumentFragment>
  message
</DocumentFragment>
`;

exports[`should format the string with highlights 3`] = `
<DocumentFragment>
  message
</DocumentFragment>
`;

exports[`should format the string with highlights 4`] = `
<DocumentFragment>
  <span>
    message
  </span>
</DocumentFragment>
`;

exports[`should format the string with highlights 5`] = `
<DocumentFragment>
  <span>
    m
    <span
      class="issue-message-highlight-CODE"
    >
      ess
    </span>
    a
    <span
      class="issue-message-highlight-CODE"
    >
      g
    </span>
    e
  </span>
</DocumentFragment>
`;

exports[`should format the string with highlights 6`] = `
<DocumentFragment>
  <span>
    a somewhat longer message with overlapping ranges
  </span>
</DocumentFragment>
`;

exports[`should format the string with highlights 7`] = `
<DocumentFragment>
  <span>
    a somewhat longer message with overlapping range
    <span
      class="issue-message-highlight-CODE"
    >
      s
    </span>
  </span>
</DocumentFragment>
`;

exports[`should format the string with highlights 8`] = `
<DocumentFragment>
  <span>
    a somewhat longer message with overlapping ranges
  </span>
</DocumentFragment>
`;

exports[`should format the string with highlights 9`] = `
<DocumentFragment>
  <span>
    a 
    <span
      class="issue-message-highlight-CODE"
    >
      somewhat longer message
    </span>
     with overlapping ranges
  </span>
</DocumentFragment>
`;

exports[`should format the string with highlights 10`] = `
<DocumentFragment>
  <span>
    a 
    <span
      class="issue-message-highlight-CODE"
    >
      somewhat longer message with
    </span>
     overlapping ranges
  </span>
</DocumentFragment>
`;
